--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .logo {
-  font-family: PT Serif;
-  padding: 40px 0;
+  width: 190px;
+  height: 35px;
+  background: url('img/logo.svg');
 }
 .menu {
   font-family: Roboto;
@@ -30,9 +31,7 @@
   margin:auto;
 }
 .header {
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
-}
-.main-content {
-
 }
