--- a/styles.css
+++ b/styles.css
@@ -63,17 +63,32 @@
 .menu__item:last-child {
   margin-right: 0;
 }
-.main-content__title {
-  font-family: PT Serif;
-  margin: 246px 191px 40px 0;
+.main {
+  padding: 0 63% 100px 0;
+  background: top right no-repeat url(img/mainimg.svg);
 }
-.main-content__description {
-  font-family: Roboto;
-  margin: 0 303px 59px 0
+.main__title {
+  font: 700 66px/87px PT Serif;
+  margin: 0 0 40px 0;
 }
-.main-content__button {
-  font-family: Roboto;
-  margin: 0 486px 327px 0
+.main__title-text_highlight {
+  background: #ECF3FF;
+}
+.main__description {
+  font: 400 22px/25px Roboto;
+  margin: 0 0 41px 0;
+}
+.main__button {
+  font: 500 18px/21px Roboto;
+  color: #FFF;
+  background: #0056EC;
+  margin: 0 0 0 0;
+  padding: 14px 21px;text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+.main__button:hover{
+  opacity: .5;
 }
 .wrapper {
   width: 80%;
@@ -83,4 +98,5 @@
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
