--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@
   font: 500 18px/21px Roboto;
   color: #000;
   text-decoration: none;
-  /* transition: opacity .5s; */
 }
 .menu__item_active::after {
   position: absolute;
@@ -64,26 +63,29 @@
   margin-right: 0;
 }
 .main {
-  padding: 0 63% 100px 0;
+  padding: 0 63% 229px 0;
   background: top right no-repeat url(img/mainimg.svg);
 }
 .main__title {
   font: 700 66px/87px PT Serif;
-  margin: 0 0 40px 0;
+  padding: 77px 0 36px 0;
+  margin: 0 0;
 }
 .main__title-text_highlight {
-  background: #ECF3FF;
+  background: linear-gradient(to top,white 10%, #ECF3FF 10%, #ECF3FF 90%, white 10%);
 }
 .main__description {
   font: 400 22px/25px Roboto;
-  margin: 0 0 41px 0;
+  padding: 0 15% 61px 0;
+  margin: 0 0;
 }
 .main__button {
   font: 500 18px/21px Roboto;
   color: #FFF;
   background: #0056EC;
   margin: 0 0 0 0;
-  padding: 14px 21px;text-decoration: none;
+  padding: 18px 21px;
+  text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
 }
@@ -95,8 +97,14 @@
   margin:auto;
 }
 .header {
-  padding: 40px 0;
+  padding: 34px 0;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 130px;
+}
+.end {
+  margin: 57px 0 40px 49%;
+  background: no-repeat center url(img/three-ellipse.svg);
+  width: 32px;
+  height: 8px;
 }
