--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .logo {
   padding-left: 44px;
-  font: 700 24px/31px PT Serif;
+  font: 700 24px/31px pt_serifbold;
   width: 146px;
   height: 32px;
   position: relative;
@@ -27,7 +27,7 @@
 }
 .menu__item {
   position: relative;
-  margin-right: 26px;
+  margin-right: 28px;
   font: 500 18px/21px Roboto;
   color: #000;
   text-decoration: none;
@@ -67,7 +67,7 @@
   background: top right no-repeat url(img/mainimg.svg);
 }
 .main__title {
-  font: 700 66px/87px PT Serif;
+  font: 700 66px/87px pt_serifbold;
   padding: 77px 0 36px 0;
   margin: 0 0;
 }
@@ -76,7 +76,7 @@
 }
 .main__description {
   font: 400 22px/25px Roboto;
-  padding: 0 15% 61px 0;
+  padding: 0 16% 61px 0;
   margin: 0 0;
 }
 .main__button {
@@ -84,7 +84,7 @@
   color: #FFF;
   background: #0056EC;
   margin: 0 0 0 0;
-  padding: 18px 21px;
+  padding: 18px 25px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
